--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
-# Created by https://www.toptal.com/developers/gitignore/api/django,python,vscode,pycharm
-# Edit at https://www.toptal.com/developers/gitignore?templates=django,python,vscode,pycharm
+# Created by https://www.toptal.com/developers/gitignore/api/django,vscode,pycharm,python,virtualenv,git
+# Edit at https://www.toptal.com/developers/gitignore?templates=django,vscode,pycharm,python,virtualenv,git
 
 ### Django ###
 *.log
@@ -149,6 +149,21 @@ dmypy.json
 
 # profiling data
 .prof
+
+### Git ###
+# Created by git for backups. To disable backups in Git:
+# $ git config --global mergetool.keepBackup false
+*.orig
+
+# Created by git when using merge tools for conflicts
+*.BACKUP.*
+*.BASE.*
+*.LOCAL.*
+*.REMOTE.*
+*_BACKUP_*.txt
+*_BASE_*.txt
+*_LOCAL_*.txt
+*_REMOTE_*.txt
 
 ### PyCharm ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
@@ -314,6 +329,18 @@ fabric.properties
 
 # profiling data
 
+### VirtualEnv ###
+# Virtualenv
+# http://iamzed.com/2009/05/07/a-primer-on-virtualenv/
+[Bb]in
+[Ii]nclude
+[Ll]ib
+[Ll]ib64
+[Ll]ocal
+[Ss]cripts
+pyvenv.cfg
+pip-selfcheck.json
+
 ### vscode ###
 .vscode/*
 !.vscode/settings.json
@@ -322,4 +349,4 @@ fabric.properties
 !.vscode/extensions.json
 *.code-workspace
 
-# End of https://www.toptal.com/developers/gitignore/api/django,python,vscode,pycharm
+# End of https://www.toptal.com/developers/gitignore/api/django,vscode,pycharm,python,virtualenv,git
